# MusicStreamer

./: .gitignore  README.md
client/: CMakeLists.txt  constants.h  helpers.cpp  helpers.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  soundendchecker.cpp  soundendchecker.h  structures.h
play/: CMakeLists.txt
play/src/: play.cpp
server/: CMakeLists.txt
server/src/: constants.h  helpers.cpp  helpers.h  server.cpp  structures.h
